[tool.poetry]
name = "python-backend"
version = "0.1.0"
description = ""
authors = ["DanilMargaryan <margaryan.danil@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
